Refactor project structure and update dependencies
- Removed `.npmrc` file.
- Added `package-lock.json` to lock dependencies.
- Updated `package.json` scripts for linting and formatting.
- Introduced `postcss.config.mjs` for Tailwind CSS integration.
- Updated `remotion.config.ts` to enable Tailwind support.
- Replaced `Main` component with `HelloWorld` for rendering.
- Removed unused components and styles, including `Spacing`, `Tips`, and related files.
- Added new `TextAnimation` component for text animations using GSAP.
- Updated global styles to use Tailwind CSS.

--- a/package.json
+++ b/package.json
@@ -6,38 +6,58 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "remotion": "remotion studio",
     "render": "remotion render",
-    "deploy": "node deploy.mjs"
+    "deploy": "node deploy.mjs",
+    "lint:fix": "eslint src --fix; tsc --noEmit",
+    "fix": "prettier --write src && eslint src --fix --fix-type problem,suggestion,layout; tsc --noEmit",
+    "fix:all": "prettier --write . && eslint . --fix --fix-type problem,suggestion,layout",
+    "format": "prettier --write src",
+    "type-check": "tsc --noEmit 2>&1 || echo 'Typescript check failed'",
+    "lint": "eslint src 2>&1 || echo 'Lint check failed'"
   },
   "dependencies": {
-    "@remotion/bundler": "^4.0.0",
-    "@remotion/cli": "^4.0.0",
-    "@remotion/google-fonts": "^4.0.0",
-    "@remotion/lambda": "^4.0.0",
-    "@remotion/paths": "^4.0.0",
-    "@remotion/player": "^4.0.0",
-    "@remotion/shapes": "^4.0.0",
+    "@remotion/animation-utils": "4.0.327",
+    "@remotion/cli": "4.0.327",
+    "@remotion/fonts": "4.0.327",
+    "@remotion/gif": "4.0.327",
+    "@remotion/google-fonts": "4.0.327",
+    "@remotion/lambda": "4.0.327",
+    "@remotion/layout-utils": "4.0.327",
+    "@remotion/lottie": "4.0.327",
+    "@remotion/media-parser": "4.0.327",
+    "@remotion/media-utils": "4.0.327",
+    "@remotion/motion-blur": "4.0.327",
+    "@remotion/noise": "4.0.327",
+    "@remotion/player": "4.0.327",
+    "@remotion/preload": "4.0.327",
+    "@remotion/renderer": "4.0.327",
+    "@remotion/shapes": "4.0.327",
+    "@remotion/transitions": "4.0.327",
+    "@remotion/zod-types": "4.0.327",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.525.0",
     "next": "15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "remotion": "^4.0.0",
-    "zod": "3.22.3"
+    "remotion": "4.0.327",
+    "zod": "^3.22.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "3.1.0",
+    "@next/eslint-plugin-next": "15.1.6",
     "@remotion/eslint-config-flat": "^4.0.0",
     "@remotion/eslint-plugin": "^4.0.0",
+    "@remotion/tailwind-v4": "^4.0.327",
     "@types/node": "20.12.14",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@types/web": "0.0.166",
     "dotenv": "16.0.3",
-    "eslint": "9.19.0",
-    "@next/eslint-plugin-next": "15.1.6",
+    "eslint": "^9.31.0",
     "eslint-config-next": "15.1.6",
-    "typescript": "5.8.2",
     "prettier": "3.6.0",
-    "@eslint/eslintrc": "3.1.0"
+    "tailwindcss": "^4.1.11",
+    "typescript": "5.8.2"
   }
 }
