--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@remotion/renderer": "^4.0.408",
     "@remotion/shapes": "^4.0.408",
     "@remotion/transitions": "^4.0.408",
+    "@remotion/web-renderer": "4.0.408",
     "@remotion/zod-types": "^4.0.408",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
