Update package.json to add new dependencies for Tailwind CSS and PostCSS
- Added @tailwindcss/postcss, css-loader, postcss, postcss-loader, and style-loader to enhance styling capabilities.
- Updated existing dependencies to ensure compatibility with the new additions.

--- a/package.json
+++ b/package.json
@@ -50,7 +50,12 @@
     "@remotion/eslint-config-flat": "^4.0.408",
     "@remotion/eslint-plugin": "^4.0.408",
     "@remotion/tailwind-v4": "^4.0.408",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "20.12.14",
+    "css-loader": "^7.1.2",
+    "postcss": "^8.5.0",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@types/web": "0.0.166",
