--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lint": "eslint src 2>&1 || echo 'Lint check failed'"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^9.2.0",
     "@remotion/animation-utils": "^4.0.408",
     "@remotion/cli": "^4.0.408",
     "@remotion/fonts": "^4.0.408",
@@ -33,6 +35,7 @@
     "@remotion/preload": "^4.0.408",
     "@remotion/renderer": "^4.0.408",
     "@remotion/shapes": "^4.0.408",
+    "@remotion/three": "^4.0.408",
     "@remotion/transitions": "^4.0.408",
     "@remotion/web-renderer": "4.0.408",
     "@remotion/zod-types": "^4.0.408",
@@ -42,6 +45,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "remotion": "^4.0.408",
+    "three": "^0.178.0",
     "zod": "^3.22.3"
   },
   "devDependencies": {
@@ -52,17 +56,18 @@
     "@remotion/tailwind-v4": "^4.0.408",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "20.12.14",
-    "css-loader": "^7.1.2",
-    "postcss": "^8.5.0",
-    "postcss-loader": "^8.1.1",
-    "style-loader": "^4.0.0",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
+    "@types/three": "^0.170.0",
     "@types/web": "0.0.166",
+    "css-loader": "^7.1.2",
     "dotenv": "16.0.3",
     "eslint": "^9.31.0",
     "eslint-config-next": "^16.1.4",
+    "postcss": "^8.5.0",
+    "postcss-loader": "^8.1.1",
     "prettier": "3.6.0",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.11",
     "typescript": "5.8.2"
   }
