--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "next": "^16.1.4",
+    "opentype.js": "^1.3.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "remotion": "^4.0.408",
@@ -56,6 +57,7 @@
     "@remotion/tailwind-v4": "^4.0.408",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "20.12.14",
+    "@types/opentype.js": "^1.3.9",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@types/three": "^0.170.0",
