--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "remotion": "remotion studio",
     "render": "remotion render",
     "deploy": "node deploy.mjs",
+    "download-font": "node scripts/download-google-font.mjs",
+    "download-fonts": "node scripts/download-top-fonts.mjs",
     "lint:fix": "eslint src --fix; tsc --noEmit",
     "fix": "prettier --write src && eslint src --fix --fix-type problem,suggestion,layout; tsc --noEmit",
     "fix:all": "prettier --write . && eslint . --fix --fix-type problem,suggestion,layout",
