Enhance text animation capabilities with RichText3DGsap component
- Introduced RichText3DGsap for advanced rich text animations, allowing multiple fonts and styles within a single text block.
- Updated Main composition to utilize RichText3DGsap, showcasing dynamic text animations with GSAP.
- Added new utility functions for calculating text layout and metrics, ensuring proper alignment and spacing.
- Integrated testing for text layout functionalities, verifying metrics and layout correctness.
- Updated package.json and package-lock.json to include new dependencies for testing and animation utilities.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "deploy": "node deploy.mjs",
     "download-font": "node scripts/download-google-font.mjs",
     "download-fonts": "node scripts/download-top-fonts.mjs",
+    "test": "vitest",
+    "test:run": "vitest run",
     "lint:fix": "eslint src --fix; tsc --noEmit",
     "fix": "prettier --write src && eslint src --fix --fix-type problem,suggestion,layout; tsc --noEmit",
     "fix:all": "prettier --write . && eslint . --fix --fix-type problem,suggestion,layout",
@@ -58,6 +60,7 @@
     "@remotion/eslint-plugin": "^4.0.408",
     "@remotion/tailwind-v4": "^4.0.408",
     "@tailwindcss/postcss": "^4.1.11",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "20.12.14",
     "@types/opentype.js": "^1.3.9",
     "@types/react": "^19.2.9",
@@ -68,11 +71,13 @@
     "dotenv": "16.0.3",
     "eslint": "^9.31.0",
     "eslint-config-next": "^16.1.4",
+    "jsdom": "^27.4.0",
     "postcss": "^8.5.0",
     "postcss-loader": "^8.1.1",
     "prettier": "3.6.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.11",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "vitest": "^4.0.18"
   }
 }
