--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "template-next-app",
+  "name": "remotion-template",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "remotion": "remotion studio",
-    "render": "remotion render",
-    "deploy": "node deploy.mjs",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "lint:fix": "eslint src --fix; tsc --noEmit",
-    "fix": "prettier --write src && eslint src --fix --fix-type problem,suggestion,layout; tsc --noEmit",
-    "fix:all": "prettier --write . && eslint . --fix --fix-type problem,suggestion,layout",
+    "fix": "prettier --write src && eslint src --fix",
     "format": "prettier --write src",
-    "type-check": "tsc --noEmit 2>&1 || echo 'Typescript check failed'",
-    "lint": "eslint src 2>&1 || echo 'Lint check failed'"
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src"
   },
   "dependencies": {
     "@remotion/animation-utils": "^4.0.408",
-    "@remotion/cli": "^4.0.408",
     "@remotion/fonts": "^4.0.408",
     "@remotion/gif": "^4.0.408",
     "@remotion/google-fonts": "^4.0.408",
-    "@remotion/lambda": "^4.0.408",
     "@remotion/layout-utils": "^4.0.408",
     "@remotion/lottie": "^4.0.408",
     "@remotion/media-parser": "^4.0.408",
@@ -31,14 +26,12 @@
     "@remotion/noise": "^4.0.408",
     "@remotion/player": "^4.0.408",
     "@remotion/preload": "^4.0.408",
-    "@remotion/renderer": "^4.0.408",
     "@remotion/shapes": "^4.0.408",
     "@remotion/transitions": "^4.0.408",
     "@remotion/web-renderer": "4.0.408",
     "@remotion/zod-types": "^4.0.408",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
-    "next": "^16.1.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "remotion": "^4.0.408",
@@ -46,24 +39,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.1.0",
-    "@next/eslint-plugin-next": "^16.1.4",
-    "@remotion/eslint-config-flat": "^4.0.408",
-    "@remotion/eslint-plugin": "^4.0.408",
-    "@remotion/tailwind-v4": "^4.0.408",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "20.12.14",
-    "css-loader": "^7.1.2",
-    "postcss": "^8.5.0",
-    "postcss-loader": "^8.1.1",
-    "style-loader": "^4.0.0",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@types/web": "0.0.166",
+    "@vitejs/plugin-react": "^4.3.4",
     "dotenv": "16.0.3",
     "eslint": "^9.31.0",
-    "eslint-config-next": "^16.1.4",
+    "postcss": "^8.5.0",
     "prettier": "3.6.0",
     "tailwindcss": "^4.1.11",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "vite": "^6.0.7"
   }
 }
