--- a/package.json
+++ b/package.json
@@ -8,49 +8,27 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint:fix": "eslint src --fix; tsc --noEmit",
-    "fix": "prettier --write src && eslint src --fix",
-    "format": "prettier --write src",
-    "type-check": "tsc --noEmit",
-    "lint": "eslint src"
+    "fix": "prettier --write src && eslint src --fix"
   },
   "dependencies": {
-    "@remotion/animation-utils": "^4.0.408",
-    "@remotion/fonts": "^4.0.408",
-    "@remotion/gif": "^4.0.408",
     "@remotion/google-fonts": "^4.0.408",
-    "@remotion/layout-utils": "^4.0.408",
-    "@remotion/lottie": "^4.0.408",
-    "@remotion/media-parser": "^4.0.408",
-    "@remotion/media-utils": "^4.0.408",
-    "@remotion/motion-blur": "^4.0.408",
-    "@remotion/noise": "^4.0.408",
     "@remotion/player": "^4.0.408",
-    "@remotion/preload": "^4.0.408",
-    "@remotion/shapes": "^4.0.408",
-    "@remotion/transitions": "^4.0.408",
-    "@remotion/web-renderer": "4.0.408",
-    "@remotion/zod-types": "^4.0.408",
     "gsap": "^3.13.0",
-    "lucide-react": "^0.525.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "remotion": "^4.0.408",
-    "zod": "^3.22.3"
+    "remotion": "^4.0.408"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "3.1.0",
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "20.12.14",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
-    "@types/web": "0.0.166",
     "@vitejs/plugin-react": "^4.3.4",
-    "dotenv": "16.0.3",
     "eslint": "^9.31.0",
     "postcss": "^8.5.0",
     "prettier": "3.6.0",
     "tailwindcss": "^4.1.11",
     "typescript": "5.8.2",
+    "typescript-eslint": "^8.33.0",
     "vite": "^6.0.7"
   }
 }
