--- a/package.json
+++ b/package.json
@@ -13,35 +13,36 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@remotion/google-fonts": "^4.0.408",
-    "@remotion/player": "^4.0.408",
+    "@remotion/google-fonts": "^4.0.414",
+    "@remotion/player": "^4.0.414",
+    "@remotion/transitions": "^4.0.414",
     "gsap": "^3.13.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "remotion": "^4.0.408"
+    "remotion": "^4.0.414"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^5.0.0",
+    "@storybook/addon-a11y": "^10.2.1",
+    "@storybook/addon-docs": "^10.2.1",
+    "@storybook/addon-onboarding": "^10.2.1",
+    "@storybook/addon-vitest": "^10.2.1",
+    "@storybook/react-vite": "^10.2.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/browser-playwright": "^4.0.18",
+    "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.31.0",
+    "playwright": "^1.58.0",
     "postcss": "^8.5.0",
     "prettier": "3.6.0",
+    "storybook": "^10.2.1",
     "tailwindcss": "^4.1.11",
     "typescript": "5.8.2",
     "typescript-eslint": "^8.33.0",
     "vite": "^6.0.7",
-    "storybook": "^10.2.1",
-    "@storybook/react-vite": "^10.2.1",
-    "@chromatic-com/storybook": "^5.0.0",
-    "@storybook/addon-vitest": "^10.2.1",
-    "@storybook/addon-a11y": "^10.2.1",
-    "@storybook/addon-docs": "^10.2.1",
-    "@storybook/addon-onboarding": "^10.2.1",
-    "vitest": "^4.0.18",
-    "playwright": "^1.58.0",
-    "@vitest/browser-playwright": "^4.0.18",
-    "@vitest/coverage-v8": "^4.0.18"
+    "vitest": "^4.0.18"
   }
 }
