--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "template-next-app",
+  "name": "remotion-template",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "remotion": "remotion studio",
     "render": "remotion render",
     "deploy": "node deploy.mjs",
@@ -25,48 +26,46 @@
   "dependencies": {
     "@react-three/drei": "^10.0.0",
     "@react-three/fiber": "^9.2.0",
-    "@remotion/animation-utils": "^4.0.408",
-    "@remotion/cli": "^4.0.408",
-    "@remotion/fonts": "^4.0.408",
-    "@remotion/gif": "^4.0.408",
-    "@remotion/google-fonts": "^4.0.408",
-    "@remotion/lambda": "^4.0.408",
-    "@remotion/layout-utils": "^4.0.408",
-    "@remotion/lottie": "^4.0.408",
-    "@remotion/media-parser": "^4.0.408",
-    "@remotion/media-utils": "^4.0.408",
-    "@remotion/motion-blur": "^4.0.408",
-    "@remotion/noise": "^4.0.408",
-    "@remotion/player": "^4.0.408",
-    "@remotion/preload": "^4.0.408",
-    "@remotion/renderer": "^4.0.408",
-    "@remotion/shapes": "^4.0.408",
-    "@remotion/three": "^4.0.408",
-    "@remotion/transitions": "^4.0.408",
-    "@remotion/web-renderer": "4.0.408",
-    "@remotion/zod-types": "^4.0.408",
+    "@remotion/animation-utils": "^4.0.414",
+    "@remotion/cli": "^4.0.414",
+    "@remotion/fonts": "^4.0.414",
+    "@remotion/gif": "^4.0.414",
+    "@remotion/google-fonts": "^4.0.414",
+    "@remotion/lambda": "^4.0.414",
+    "@remotion/layout-utils": "^4.0.414",
+    "@remotion/lottie": "^4.0.414",
+    "@remotion/media-parser": "^4.0.414",
+    "@remotion/media-utils": "^4.0.414",
+    "@remotion/motion-blur": "^4.0.414",
+    "@remotion/noise": "^4.0.414",
+    "@remotion/player": "^4.0.414",
+    "@remotion/preload": "^4.0.414",
+    "@remotion/renderer": "^4.0.414",
+    "@remotion/shapes": "^4.0.414",
+    "@remotion/three": "^4.0.414",
+    "@remotion/transitions": "^4.0.414",
+    "@remotion/web-renderer": "4.0.414",
+    "@remotion/zod-types": "^4.0.414",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
-    "next": "^16.1.4",
     "opentype.js": "^1.3.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "remotion": "^4.0.408",
+    "remotion": "^4.0.414",
     "three": "^0.178.0",
     "zod": "^3.22.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^5.0.0",
     "@eslint/eslintrc": "3.1.0",
+    "@remotion/eslint-config-flat": "^4.0.414",
+    "@remotion/eslint-plugin": "^4.0.414",
+    "@remotion/tailwind-v4": "^4.0.414",
     "@storybook/addon-a11y": "^10.2.1",
     "@storybook/addon-docs": "^10.2.1",
     "@storybook/addon-onboarding": "^10.2.1",
-    "@storybook/nextjs-vite": "^10.2.1",
-    "storybook": "^10.2.1",
-    "@next/eslint-plugin-next": "^16.1.4",
-    "@remotion/eslint-config-flat": "^4.0.408",
-    "@remotion/eslint-plugin": "^4.0.408",
-    "@remotion/tailwind-v4": "^4.0.408",
+    "@storybook/addon-vitest": "^10.2.1",
+    "@storybook/react-vite": "^10.2.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/react": "^16.3.2",
     "@types/node": "20.12.14",
@@ -75,17 +74,20 @@
     "@types/react-dom": "^19.2.3",
     "@types/three": "^0.170.0",
     "@types/web": "0.0.166",
-    "css-loader": "^7.1.2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/browser-playwright": "^4.0.18",
+    "@vitest/coverage-v8": "^4.0.18",
     "dotenv": "16.0.3",
     "eslint": "^9.31.0",
-    "eslint-config-next": "^16.1.4",
     "jsdom": "^27.4.0",
+    "playwright": "^1.58.0",
     "postcss": "^8.5.0",
-    "postcss-loader": "^8.1.1",
     "prettier": "3.6.0",
-    "style-loader": "^4.0.0",
+    "storybook": "^10.2.1",
     "tailwindcss": "^4.1.11",
     "typescript": "5.8.2",
+    "typescript-eslint": "^8.33.0",
+    "vite": "^6.0.7",
     "vitest": "^4.0.18"
   }
 }
